 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/10/24 08:41:41
     [sshd.c]
     mention remote port in debug message
   - markus@cvs.openbsd.org 2001/10/24 08:41:20
     [ssh.c]
     remove unused
   - markus@cvs.openbsd.org 2001/10/24 08:51:35
     [clientloop.c ssh.c]
     ignore SIGPIPE early, makes ssh work if agent dies, netbsd-pr via itojun@

20011109
 - (stevesk) auth-pam.c: use do_pam_authenticate(PAM_DISALLOW_NULL_AUTHTOK)
   if permit_empty_passwd == 0 so null password check cannot be bypassed.
   jayaraj@amritapuri.com OpenBSD bug 2168
	
20011103
 - (tim) [ contrib/caldera/openssh.spec contrib/caldera/sshd.init] Updates 
   from Raymund Will <ray@caldera.de>
   [acconfig.h configure.in] Clean up login checks.
   Problem reported by Jim Knoble <jmknoble@pobox.com>

20011101
 - (djm) Compat define for OpenSSL < 0.9.6 (No OPENSSL_free)

20011031
 - (djm) Unsmoke drugs: config files should be noreplace.

20011030
 - (djm) Redhat RPM spec: remove noreplace from config files, allow IPv6 
   by default (can force IPv4 using --define "noipv6 1")

20011029
 - (tim) [TODO defines.h loginrec.c] Change the references to configure.in
   to configure.ac

20011028
 - (djm) Avoid bug in Solaris PAM libs
 - (djm) Disconnect if no tty and PAM reports password expired
 - (djm) Fix for PAM password changes being echoed (from stevesk)
 - (stevesk) Fix compile problem with PAM password change fix
 - (stevesk) README: zlib location is http://www.gzip.org/zlib/

20011027
 - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
   Patch by Robert Dahlem <Robert.Dahlem@siemens.com>

20011026
 - (bal) Set the correct current time in login_utmp_only().  Patch by
   Wayne Davison <wayned@users.sourceforge.net>
 - (tim) [scard/Makefile.in] Fix install: when building outside of source
	 tree and using --src=/full_path/to/openssh
	 Patch by Mark D. Baushke <mdb@juniper.net>

20011025
 - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
   by todd@